# SmartPointers

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Widget.h  defaultmemoryfunctions.h  header.h  main.cpp  shared_ptr.h  unique_ptr.h  weak_ptr.h
tests/: CMakeLists.txt  tests.cpp
